# GamepadCommander

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
.github/workflows/: release.yml
packaging/: AppRun  GamepadCommander.desktop  GamepadCommander.rc.in  nonsteam
scripts/: build-all.sh  stage-windows-dlls.sh
src/: SteamHelper.cpp  SteamHelper.h  main.cpp
toolchains/: mingw64.cmake
